--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
-GITHUB_CLIENT_ID=aa47bcdb2cc2a8624000
-GITHUB_CLIENT_SECRET=a60e8073369394e3e4bef9338b9ba5dc0d34b807
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
 
 DB_HOST=localhost
 DB_NAME=clubhouse
