--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
     "passport-jwt": "^4.0.0",
+    "passport-twitter": "^1.0.4",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "react": "17.0.2",
